# qoraal-tictactoe

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_and_run.bat  build_and_run.sh  simple.e  test.e  tictactoe.e  welcome.e
include/qoraal-tictactoe/: services.h  wserver_inst.h
src/: CMakeLists.txt  main.c  platform.c  posix.ld  tictactoe.c  zephyr_console.c
src/services/: engine.c  services.h  system.c  telnetserver.c  wserver_inst.c  wserver_inst.h
src/services/html/: htmlpart.c  htmlpart.h  wengine.c  wengine.h
src/services/parts/: html.c  html.h
src/services/www/: wserver_inst.c
src/services/www/css/: skeleton.css  skeleton.inc
src/services/www/html/: wabout.c  wabout.h  wengine.c  wengine.h  wnlog.c  wnlog.h  wrtlog.c  wrtlog.h  wservices.c  wservices.h  wshell.c  wshell.h  wsystem.c  wsystem.h
src/services/www/image/: logo.inc
src/services/www/parts/: html.c  html.h  tictactoe.c
test/: CMakeLists.txt  main.c
test/posix/: CMakeLists.txt  platform.c  posix.ld
test/zephyr/: CMakeLists.txt  pm_static.yml  prj.conf  secrets.conf.example  sysbuild.conf
test/zephyr/boards/: nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay
test/zephyr/src/: platform.c  zephyr.ld
